preload of card back did not seem to be working so added tests which passed without modification. Quite certain this is a load on visibility issue needing a different solution.

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1 a {
     margin: auto;
     color: transparent;
     background: var(--titleColour);
-    mask-image: url(/img/cribtrainer-arched.svg);
+    mask-image: url("/img/cribtrainer-arched.svg");
     mask-size: contain;
     mask-repeat: no-repeat;
     mask-position: center;
@@ -112,7 +112,7 @@ a {
 
 #cards {
     --cardset-should-animate: 1;
-    --cardset-card-background-image: url('/img/card-back.svg');
+    --cardset-card-background-image: url("/img/card-back.svg");
     flex: 1;
     max-width: calc(var(--maxTitleWidth) - 5rem);
 }
